test/success/named_arg/method/main.sk
module Main {

struct Foo {
    fn foo(self, bar: Int) {
        assert(bar == 42);
    }
}

fn main() {
    let f = Foo();
    f.foo(bar: 42);
}

}